@@ -42,14 +42,21 @@
 #include "lib/dw/Dwfl.h"
 
 void
-lib::dw::Dwfl::dwfl_begin(){
+lib::dw::Dwfl::dwfl_begin(jint pid){
 	const ::Dwfl_Callbacks callbacks = {
 		::dwfl_linux_proc_find_elf,
 		::dwfl_standard_find_debuginfo,
 		NULL,
-		NULL
+		"-:.debug:/usr/bin/debug"
 	};
-	this->pointer = (jlong) ::dwfl_begin(&callbacks);
+	
+	::Dwfl* dwfl = ::dwfl_begin(&callbacks);
+	
+	::dwfl_report_begin(dwfl);
+	::dwfl_linux_proc_report((pid_t) pid);
+	::dwfl_report_end(dwfl, NULL, NULL);
+	
+	this->pointer = (jlong) dwfl
 }
 
 void
